@@ -1,8 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "DTD/xhtml1-transitional.dtd">
-<!-- Silva 2.1 (unreleased) -->
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en"
       xml:lang="en"
-      xmlns:tal="http://xml.zope.org/namespaces/tal">
+      xmlns:tal="http://xml.zope.org/namespaces/tal"
+      i18n:domain="Silva">
 <head>
   <title>Login Required</title>
 <link rel="stylesheet" href="frontend.css" type="text/css"
@@ -10,7 +10,13 @@
 </head>
 <body>
   <div class="public">
-    <h3> Log in with an existing account </h3>
+    <h3 i18n:translate=""> Log in with an existing account </h3>
+
+    <p style="color: red; font-weight: bold" 
+       tal:condition="request/login_status | nothing"
+       tal:content="request/login_status">
+      Status
+    </p>
 
     <form method="post" action=""
           tal:attributes="action string:${here/absolute_url}/login">
@@ -19,17 +25,18 @@
              tal:attributes="value request/came_from | string:"/>
       <table cellpadding="2">
         <tr>
-          <td><b>Login:</b> </td>
+          <td><b i18n:translate="">Login:</b> </td>
           <td><input type="text" name="__ac_name" size="30" /></td>
         </tr>
         <tr>
-          <td><b>Password:</b></td>
+          <td><b i18n:translate="">Password:</b></td>
           <td><input type="password" name="__ac_password" size="30" /></td>
         </tr>
         <tr>
           <td colspan="2">
             <br />
-            <input type="submit" value=" Log In " />
+            <input type="submit" value=" Log In "
+                   i18n:attributes="value" />
           </td>
         </tr>
       </table>
